--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,8 +1,3 @@
-.header {
-    color: var(--title-text-color);
-
-}
-
 .container {
     margin: 0 auto;
     padding-left: 15px;
@@ -10,14 +5,16 @@
     width: 1200px;
 }
 
-.header-container {
+.header {
+    color: var(--title-text-color);
+&-container {
     display: flex;
     align-items: center;
 
 }
 
 
-.header-logo {
+&-logo {
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
@@ -28,18 +25,19 @@
     color: var(--title-text-color);
     margin-right: 93px;
     transition: var(--transition-ms);
-}
-
-.header-logo:focus,
-.header-logo:hover {
+    
+    &:focus,
+    &:hover {
     color: var(--accent-color);
 }
 
-.header-logo-web {
+}
+
+&-logo-web {
     color: var(--accent-color);
 }
 
-.header-nav {
+&-nav {
     text-decoration: none;
     list-style-type: none;
     display: flex;
@@ -47,12 +45,18 @@
 
 }
 
-.header-nav-item {
+&-nav-item {
     display: block;
     position: relative;
+    
+
+    &:hover .header-line {
+    background-color: var(--accent-color);
+    display: block;
+}
 }
 
-.header-line-ac {
+&-line-ac {
     align-items: flex-end;
     width: 100%;
     height: 4px;
@@ -64,12 +68,7 @@
 
 
 
-.header-nav-item:hover .header-line {
-    background-color: var(--accent-color);
-    display: block;
-}
-
-.header-nav-li {
+&-nav-li {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.1428;
@@ -82,20 +81,20 @@
     padding-top: 32px;
     padding-bottom: 32px;
     transition: var(--transition-ms);
+
+    &:hover,
+    &:focus {
+    color: var(--accent-color);
+}
 }
 
-.header-nav-li:hover,
-.header-nav-li:focus {
+
+&-nav-li-ac {
     color: var(--accent-color);
 
 }
 
-.header-nav-li-ac {
-    color: var(--accent-color);
-
-}
-
-.header-nav-contact {
+&-nav-contact {
     color: var(--title-N2-text-color);
     text-decoration: none;
     list-style-type: none;
@@ -109,13 +108,14 @@
     padding-top: 32px;
     padding-bottom: 32px;
     transition: var(--transition-ms);
-}
 
-.header-nav-contact:focus,
-.header-nav-contact:hover {
+    &:focus,
+    &:hover {
     color: var(--accent-color);
     fill: var(--accent-color);
 }
+}
+
 
 .contact-head {
     align-items: baseline;
@@ -124,7 +124,7 @@
     fill: var(--title-N2-text-color);
 }
 
-.header-nav-a {
+&-nav-a {
     margin-left: auto;
 }
 
@@ -138,3 +138,6 @@
 .svg-header {
     margin-right: 10px;
 }
+}
+
+
