--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -17,13 +17,6 @@
     border-radius: 5px;
     transform: translate(-50%, -50%);
     padding: 40px;
-}
-
-
-.modal-button:hover,
-.modal-button:focus+.modal-buttob-svg {
-    fill: var(--accent-color);
-}
 
 .modal-button {
     border-radius: 50%;
@@ -37,16 +30,18 @@
     position: absolute;
     right: 8px;
     top: 8px;
+    
+    &:hover,
+    &:focus + &-svg {
+    fill: var(--accent-color);
+}
+
 }
 
 
-.is-hidden {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-}
 
-.modal-title {
+
+&-title {
     font-size: 20px;
     line-height: 1.15;
     text-align: center;
@@ -56,33 +51,35 @@
     margin-bottom: 12px;
 }
 
-.modal-imput {
+&-imput {
     width: 100%;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     height: 40px;
     position: relative;
     padding-left: 42px;
-}
 
-.modal-imput:focus,
-.modal-imput:checked {
+    &:focus,
+    &:checked {
     border: 1px solid var(--accent-color);
     color: var(--accent-color);
 }
 
-
-.modal-imput:focus+.modal-icon {
+   &:focus + .modal-icon {
     fill: var(--accent-color);
 }
 
-.modal-container {
+}
+
+
+
+&-container {
     margin-top: 4px;
     position: relative;
     margin-bottom: 10px;
 }
 
-.modal-p {
+&-p {
     font-weight: 400;
     font-size: 12px;
     line-height: 1.1666;
@@ -90,13 +87,13 @@
     color: var(--title-N2-text-color);
 }
 
-.modal-icon {
+&-icon {
     position: absolute;
     bottom: 11px;
     left: 12px;
 }
 
-.modal-imput-coment {
+&-imput-coment {
     width: 100%;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
@@ -109,25 +106,15 @@
     letter-spacing: 0.01em;
     color: var(--title-N2-text-color);
     padding: 12px;
-}
 
-.modal-imput-coment:checked,
-.modal-imput-coment:focus {
+    
+    &:checked,
+    &:focus {
     border: 1px solid var(--accent-color);
     color: var(--accent-color);
 }
-
-.modal-policy-a {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1, 7142;
-    letter-spacing: 0.03em;
-    color: var(--accent-color);
-    border-bottom: 1px solid var(--accent-color);
-    align-items: baseline;
-    margin-left: 5px;
 }
+
 
 .check-text {
     font-weight: 400;
@@ -140,9 +127,8 @@
     margin-right: auto;
     margin-left: auto;
     justify-content: center;
-}
 
-.check-text::before {
+&::before {
     content: '';
     width: 16px;
     height: 15px;
@@ -152,25 +138,32 @@
     margin-top: auto;
     margin-bottom: auto;
 }
-
-.modal-check {
-    margin-right: auto;
-    margin-left: auto;
 }
 
-.modal-check:checked+.check-text::before {
+&-check {
+    margin-right: auto;
+    margin-left: auto;
+
+    &:checked + .check-text::before {
     border: none;
     background-image: url(../img/Vector.svg);
     background-repeat: no-repeat;
     background-color: var(--accent-color);
     background-position: center;
 }
+}
 
-.modal-policy-check {
+
+
+&-policy-check {
     margin-top: 20px;
     margin-bottom: 30px;
     margin-right: auto;
     margin-left: auto;
+}
+
+
+
 }
 
 .modal-send {
@@ -193,3 +186,21 @@
     margin-right: auto;
     margin-left: auto;
 }
+
+.modal-policy-a {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1, 7142;
+    letter-spacing: 0.03em;
+    color: var(--accent-color);
+    border-bottom: 1px solid var(--accent-color);
+    align-items: baseline;
+    margin-left: 5px;
+    text-decoration: none;
+}
+
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;}
