--- a/sass/layouts/_portfolio-list.scss
+++ b/sass/layouts/_portfolio-list.scss
@@ -1,20 +1,22 @@
-.portfolio-list-title {
+.portfolio{
+
+    &-list-title {
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
-    letter-spacing: 0.06em;
+    letter-spacing: 0.04em;
     margin-bottom: 4px;
     color: var(--title-N3-text-color);
 }
 
-.portfolio-list-p {
+&-list-p {
     line-height: 1.1875;
     letter-spacing: 0.03em;
     color: var(--title-N2-text-color);
 }
 
 
-.portfolio-list {
+&-list {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -22,7 +24,7 @@
 }
 
 
-.portfolio-list>.port-thumb {
+&-list > .port-thumb {
     flex-basis: calc(100% / 3);
 }
 
@@ -47,23 +49,22 @@
     border-bottom: 1px solid #ECECEC;
 }
 
-.portfolio-list-li:hover,
-.portfolio-list-li:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+
 
 .portfolio-list-li {
     width: 370px;
-    color: var(--title-N3-text-color);
+    text-decoration: none;
+
+    &:hover,
+    &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portfolio-list-li:hover .portfolio-list-scrol {
+    &:hover .portfolio-list-scrol {
     transform: translateY(0);
+}
 }
 
-.list-portfolio:focus .portfolio-list-scrol {
-    transform: translateY(0);
-}
 
 .portfolio-list-scrol {
     position: absolute;
@@ -78,7 +79,16 @@
     transform: translateY(100%);
     transition: var(--transition-ms);
     overflow: auto;
+
+    .list-portfolio:focus &-list-scrol {
+    transform: translateY(0);
 }
+}
+
+
+}
+
+
 
 .list-patfolio-wrap {
     position: relative;
