--- a/sass/layouts/main.scss
+++ b/sass/layouts/main.scss
@@ -1,12 +1,13 @@
+@import '../base/reset';
 @import '../base/commons';
-@import './layouts/header';
-@import './layouts/hero';
-@import './layouts/list';
-@import './layouts/work';
-@import './layouts/team';
-@import './layouts/client';
-@import './layouts/footer';
-@import './layouts/modal';
-@import './layouts/portfolio-commons';
-@import './layouts/portfolio-buttons';
-@import './layouts/portfolio-list';
+@import './header';
+@import './hero';
+@import './list';
+@import './work';
+@import './team';
+@import './client';
+@import './footer';
+@import './modal';
+@import './portfolio-commons';
+@import './portfolio-buttons';
+@import './portfolio-list';
