--- a/style/main.css
+++ b/style/main.css
@@ -1,79 +1,3 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0;
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-address {
-  list-style: none;
-}
-
-:root {
-  --accent-color: #2196F3;
-  --title-text-color: #000000;
-  --title-N2-text-color: #757575;
-  --basic-title-color: #ffffff;
-  --hero-footer-color: #2F303A;
-  --title-N3-text-color: #212121;
-  --backroun-color: #F5F4FA;
-  --icon-basic-color: #AFB1B8;
-  --transition-ms: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-*,
-::before,
-::after {
-  box-sizing: border-box;
-}
-
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.section-work {
-  padding-bottom: 94px;
-}
-
-img {
-  display: block;
-}
-
-button {
-  cursor: pointer;
-}
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  -webkit-clip-path: inset(100%);
-          clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-.container {
-  margin: 0 auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  width: 1200px;
-}
-
 .header {
   color: var(--title-text-color);
 }
@@ -917,4 +841,121 @@ button {
 .list-patfolio-wrap {
   position: relative;
   overflow: hidden;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+address {
+  list-style: none;
+}
+
+:root {
+  --accent-color: #2196F3;
+  --title-text-color: #000000;
+  --title-N2-text-color: #757575;
+  --basic-title-color: #ffffff;
+  --hero-footer-color: #2F303A;
+  --title-N3-text-color: #212121;
+  --backroun-color: #F5F4FA;
+  --icon-basic-color: #AFB1B8;
+  --transition-ms: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+*,
+::before,
+::after {
+  box-sizing: border-box;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.section-work {
+  padding-bottom: 94px;
+}
+
+img {
+  display: block;
+}
+
+button {
+  cursor: pointer;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.container {
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 1200px;
+}
+
+@media screen and (min-width: 0) {
+  .container {
+    width: 450px;
+  }
+  .hero {
+    min-width: 450px;
+    max-width: 480px;
+  }
+  .list-con-div {
+    display: block;
+  }
+  .work {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    -webkit-clip-path: inset(100%);
+            clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
+  .client-ul {
+    display: block;
+  }
+  .team-con-ul {
+    display: block;
+  }
+}
+@media screen and (min-width: 738) {
+  .container {
+    width: 738px;
+  }
+  .hero {
+    min-width: 738px;
+    max-width: 768px;
+  }
 }/*# sourceMappingURL=main.css.map */
